--- a/templates/partials/_sidenavbar.html
+++ b/templates/partials/_sidenavbar.html
@@ -2,8 +2,8 @@
     <a href="javascript:void(0)" class="closebtn" onclick="toggleNav()">&times;</a>
     
     <a href="{% url 'create-case' %}">Create Case</a>
-    <a href="{% url 'all-case' %}">All Cases</a>
-    <a href="#">Home</a>
+    <a href="{% url 'all-cases' %}">All Cases</a>
+    <a href="{% url 'home' %}">Home</a>
     <a href="#">About</a>
     <a href="#">Services</a>
     <a href="#">Contact</a>
