--- a/templates/partials/_sidenavbar.html
+++ b/templates/partials/_sidenavbar.html
@@ -4,6 +4,10 @@
     <a href="{% url 'create-case' %}">Create Case</a>
     <a href="{% url 'all-cases' %}">All Cases</a>
     <a href="{% url 'home' %}">Home</a>
+    <a href="{% url 'case-type' %}">Case Type</a>
+    <a href="{% url 'courts' %}">Court</a>
+    <a href="#">Police Station</a>
+    <a href="#">About</a>
     <a href="#">About</a>
     <a href="#">Services</a>
     <a href="#">Contact</a>
