--- a/templates/partials/_sidenavbar.html
+++ b/templates/partials/_sidenavbar.html
@@ -6,8 +6,7 @@
     <a href="{% url 'home' %}">Home</a>
     <a href="{% url 'case-type' %}">Case Type</a>
     <a href="{% url 'courts' %}">Court</a>
-    <a href="#">Police Station</a>
-    <a href="#">About</a>
+    <a href="{% url 'stations' %}">Police Station</a>
     <a href="#">About</a>
     <a href="#">Services</a>
     <a href="#">Contact</a>
