--- a/templates/cases/courts.html
+++ b/templates/cases/courts.html
@@ -1,12 +1,15 @@
 
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
 {% block content %}
   <h1>Courts</h1>
   <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Create</button>
+
+    {{ form|crispy }}
+    
+    <button type="submit" class="btn btn-primary">Create</button>
   </form>
 
   <h1>Courts List</h1>
