--- a/templates/cases/create_case.html
+++ b/templates/cases/create_case.html
@@ -1,11 +1,12 @@
 
 {% extends 'base.html' %}
-
+{% load crispy_forms_tags %}
 {% block content %}
   <h1>Create Case</h1>
   <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Create</button>
+    {{ form|crispy }}
+    
+    <button type="submit" class="btn btn-primary">Create</button>
   </form>
 {% endblock %}
