--- a/the-diary/diary/static/css/styles.css
+++ b/the-diary/diary/static/css/styles.css
@@ -10930,8 +10930,8 @@ body {
   overflow-y: auto;
 }
 .sb-nav-fixed #layoutSidenav #layoutSidenav_content {
-  /* padding-left: 225px; */
-  top: 80px;
+  padding-left: 225px;
+  top: 56px;
 }
 
 #layoutError {
