--- a/the-diary/templates/dashboard/dashboard.html
+++ b/the-diary/templates/dashboard/dashboard.html
@@ -16,35 +16,37 @@
 
         {% include 'dashboard/includes/topnavbar.html' %}
 
+
         <div id="layoutSidenav">
             <div id="layoutSidenav_nav">
+
+
                 {% include 'dashboard/includes/sidebar.html' %}
+
+
+
             </div>
             <div id="layoutSidenav_content">
-                <main>
-                    <div class="container-fluid px-4">
-                        <h1 class="mt-4">Dashboard</h1>
-                        <ol class="breadcrumb mb-4">
-                            <li class="breadcrumb-item active">Dashboard</li>
-                        </ol>
-                        
-                        {% block content %}
-                        
-                        
-                        {% endblock content %}
 
 
-                        
-                        
-                       
-                    </div>
-                </main>
+                {% block content %}
+
+
+
+                
+                {% endblock content %}
+
+
+
                 {% include 'dashboard/includes/footer.html' %}
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="{% static 'js/scripts.js' %}"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
+        <script src="{% static 'assets/demo/chart-area-demo.js'%}"></script>
+        <script src="{% static 'assets/demo/chart-bar-demo.js' %}"></script>
         <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
+        <script src="{% static 'js/datatables-simple-demo.js' %}"></script>
     </body>
 </html>
