--- a/the-diary/templates/registration/login.html
+++ b/the-diary/templates/registration/login.html
@@ -13,14 +13,14 @@
     
                 <div class="row">
                     <div class="col-md-4"></div>
-                    <div class="col-md-4">{{ login_form.email|as_crispy_field }}</div>
+                    <div class="col-md-4">{{ form.email|as_crispy_field }}</div>
                     <div class="col-md-4"></div>
             
                     
                 </div>
                 <div class="row">
                     <div class="col-md-4"></div>
-                    <div class="col-md-4">{{ login_form.password|as_crispy_field }}</div>
+                    <div class="col-md-4">{{ form.password|as_crispy_field }}</div>
                     <div class="col-md-4"></div>
              
                     
