--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -14,7 +14,7 @@
             <div class="col-xl-3 col-md-6">
                 <div class="card bg-primary text-white mb-4">
                     <div class="card-body">
-                        <h1 class="display-4">5</h1> <!-- Replace '123456789' with your desired large number -->
+                        <h1 class="display-4">{{ all_cases }}</h1> <!-- Replace '123456789' with your desired large number -->
                         All Cases
                     </div>
                     <div class="card-footer d-flex align-items-center justify-content-between">
@@ -25,9 +25,9 @@
             </div>
 
             <div class="col-xl-3 col-md-6">
-                <div class="card bg-warning text-white mb-4">
+                <div class="card bg-primary text-white mb-4">
                     <div class="card-body">
-                        <h1 class="display-4">5</h1> <!-- Replace '123456789' with your desired large number -->
+                        <h1 class="display-4">{{running_cases}}</h1> <!-- Replace '123456789' with your desired large number -->
                         Running Cases
                     </div>
                     <div class="card-footer d-flex align-items-center justify-content-between">
@@ -40,8 +40,34 @@
             <div class="col-xl-3 col-md-6">
                 <div class="card bg-success text-white mb-4">
                     <div class="card-body">
-                        <h1 class="display-4">5</h1> <!-- Replace '123456789' with your desired large number -->
+                        <h1 class="display-4">{{ todays_cases }}</h1> <!-- Replace '123456789' with your desired large number -->
+                        Todays Cases
+                    </div>
+                    <div class="card-footer d-flex align-items-center justify-content-between">
+                        <a class="small text-white stretched-link" href="#">View Details</a>
+                        <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xl-3 col-md-6">
+                <div class="card bg-success text-white mb-4">
+                    <div class="card-body">
+                        <h1 class="display-4">{{ tomorrows_cases }}</h1> <!-- Replace '123456789' with your desired large number -->
                         Tomorrows Cases
+                    </div>
+                    <div class="card-footer d-flex align-items-center justify-content-between">
+                        <a class="small text-white stretched-link" href="#">View Details</a>
+                        <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xl-3 col-md-6">
+                <div class="card bg-warning text-white mb-4">
+                    <div class="card-body">
+                        <h1 class="display-4">{{ not_updated_cases }}</h1> <!-- Replace '123456789' with your desired large number -->
+                        Not updated Cases
                     </div>
                     <div class="card-footer d-flex align-items-center justify-content-between">
                         <a class="small text-white stretched-link" href="#">View Details</a>
@@ -53,8 +79,8 @@
             <div class="col-xl-3 col-md-6">
                 <div class="card bg-danger text-white mb-4">
                     <div class="card-body">
-                        <h1 class="display-4">5</h1> <!-- Replace '123456789' with your desired large number -->
-                        Not updated Cases
+                        <h1 class="display-4">{{ abandoned_cases }}</h1> <!-- Replace '123456789' with your desired large number -->
+                        Abandoned Cases
                     </div>
                     <div class="card-footer d-flex align-items-center justify-content-between">
                         <a class="small text-white stretched-link" href="#">View Details</a>
