--- a/templates/cases/tomorrows_cases.html
+++ b/templates/cases/tomorrows_cases.html
@@ -21,7 +21,7 @@
       </tr>
     </thead>
     <tbody>
-      {% for case in cases %}
+      {% for case in tomorrows_cases %}
         <tr>
           <td>{{ case.case_type }}</td>
           <td>{{ case.court }}</td>
