--- a/the-diary/templates/cases/all_cases.html
+++ b/the-diary/templates/cases/all_cases.html
@@ -5,28 +5,72 @@
     <div class="row">
         <div class="col-md-12">
             <h3 class="text-center">Case List</h3>
-            {% if cases %}
-                    <table>
-                        <thead>
+                {% if cases %}
+                    <table class="table">
+                        <thead class="thead-dark">
+                            <tr>
+                            <th scope="col">Case Type</th>
+                            <th scope="col">Court</th>
+                            <th scope="col">Date</th>
+                            <th scope="col">First Party</th>
+                            <th scope="col">Appointed By</th>
+                            <th scope="col">Law and Section</th>
+                            <th scope="col">Case No</th>
+                            <th scope="col">Police Station</th>
+                            <th scope="col">Fixed For</th>
+                            <th scope="col">Second Party</th>
+                            <th scope="col">Mobile No.</th>
+                            <th scope="col">Comments</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for case in cases %}
+                            <tr>
+                            <th scope="row">{{ case.case_type }}</th>
+                            <td>{{ case.court }}</td>
+                            <td>{{ case.date }}</td>
+                            <td>{{ case.first_party }}</td>
+                            <td>{{ case.appointed_by }}</td>
+                            <td>{{ case.law_and_section }}</td>
+                            <td>{{ case.case_no }}</td>
+                            <td>{{ case.police_station }}</td>
+                            <td>{{ case.fixed_for }}</td>
+                            <td>{{ case.second_party }}</td>
+                            <td>{{ case.mobile_no }}</td>
+                            <td>{{ case.comments }}</td>
+                            </tr>
+                           {% endfor %}
+                        </tbody>
+                        </table>
+                    {% else %}
+                    <h3 class="text-center alert alert-primary" role="alert">Currently, You don't have any cases</h3>
+                    {% endif %}
+        </div>
+    </div>
+  </div>
+{% endblock %}
+
+
+                        <thead class="thead-dark">
                         <tr>
-                            <th>Case Type</th>
-                            <th>Court</th>
-                            <th>Date</th>
-                            <th>First Party</th>
-                            <th>Appointed By</th>
-                            <th>Law and Section</th>
-                            <th>Case No</th>
-                            <th>Police Station</th>
-                            <th>Fixed For</th>
-                            <th>Second Party</th>
-                            <th>Mobile No.</th>
-                            <th>Comments</th>
+                            <th scope="col">Case Type</th>
+                            <th scope="col">Court</th>
+                            <th scope="col">Date</th>
+                            <th scope="col">First Party</th>
+                            <th scope="col">Appointed By</th>
+                            <th scope="col">Law and Section</th>
+                            <th scope="col">Case No</th>
+                            <th scope="col">Police Station</th>
+                            <th scope="col">Fixed For</th>
+                            <th scope="col">Second Party</th>
+                            <th scope="col">Mobile No.</th>
+                            <th scope="col">Comments</th>
                         </tr>
                         </thead>
                         <tbody>
                         {% for case in cases %}
                             <tr>
-                            <td>{{ case.case_type }}</td>
+                            <th scope="row">{{ case.case_type }}</th>
                             <td>{{ case.court }}</td>
                             <td>{{ case.date }}</td>
                             <td>{{ case.first_party }}</td>
@@ -44,12 +88,6 @@
                             <td colspan="12">No cases found.</td>
                             </tr>
                         {% endfor %}
-                        </tbody>
+                        </tr>
+                    </tbody>
                     </table>
-                    {% else %}
-                    <h3 class="text-center alert alert-primary" role="alert">Currently, You don't have any cases</h3>
-                    {% endif %}
-        </div>
-    </div>
-  </div>
-{% endblock %}
