--- a/the-diary/templates/cases/police_stations.html
+++ b/the-diary/templates/cases/police_stations.html
@@ -3,37 +3,63 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-  <h1>Courts</h1>
-  <form method="post">
-    {% csrf_token %}
 
-    {{ form|crispy }}
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+
+      <h2 class="text-center">Courts</h2>
+      <form method="post">
+        {% csrf_token %}
     
-    <button type="submit" class="btn btn-primary">Create</button>
-  </form>
+        <div class="row">
+          <div class="col-md-6 offset-md-3">
+            {{ form.station|as_crispy_field }}
+          </div>
+        </div>
+        
+        <div class="row">
+          <div class="col-md-2 offset-md-3">
+            <button type="submit" class="btn btn-primary">Create</button>
+          </div>
+        </div>
+      </form>
+    <br>
+    <br>
+      <div class="row">
+        <div class="col-md-6 offset-md-3">
+          <h2 class="text-center">Courts List</h2>
+      <div class="table-container">
+        <table class="table">
+          <thead class="thead-dark">
+            <tr>
+              <th scope="col">Court</th>
+              <th scope="col">Edit</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for single_station in stations %}
+              <tr>
+                <td>{{ single_station.station }}</td>
+                <td><a href="/stations/{{ single_station.id }}">Edit</a></td> <!-- Add an "Edit" button -->
+              </tr>
+            {% empty %}
+              <tr>
+                <td colspan="12">No cases found.</td>
+              </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
 
-  <h1>Courts List</h1>
-  <div class="table-container">
-    <table>
-      <thead>
-        <tr>
-          <th>Court</th>
-          <th>Edit</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for single_station in stations %}
-          <tr>
-            <td>{{ single_station.station }}</td>
-            <td><a href="/stations/{{ single_station.id }}">Edit</a></td> <!-- Add an "Edit" button -->
-          </tr>
-        {% empty %}
-          <tr>
-            <td colspan="12">No cases found.</td>
-          </tr>
-        {% endfor %}
-      </tbody>
-    </table>
+        </div>
+      </div>
+    
+
+
+    </div>
   </div>
-
+</div>
+ 
 {% endblock %}
