--- a/templates/dashboard/includes/sidebar.html
+++ b/templates/dashboard/includes/sidebar.html
@@ -52,7 +52,8 @@
         </a>
         <div class="collapse" id="accounts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
             <nav class="sb-sidenav-menu-nested nav">
-                <a class="nav-link" href="#">Statements</a>
+                <a class="nav-link" href="{% url 'transaction' %}">Entry Transaction</a>
+                <a class="nav-link" href="{% url 'statements' %}">Statements</a>
                 <a class="nav-link" href="#">Due Bills</a>
                 <a class="nav-link" href="#">Bills and Invoices</a>
                 <a class="nav-link" href="#">Quotations</a>
