--- a/templates/cases/all_client.html
+++ b/templates/cases/all_client.html
@@ -6,18 +6,18 @@
         <div class="col-md-12">
             <h3 class="text-center">Case List</h3>
             {% if clients %}
-                    <table>
-                        <thead>
+                <table class="table">
+                    <thead class="thead-dark">
                         <tr>
-                            <th>Name</th>
-                            <th>Branch</th>
-                            <th>Chamber File Number</th>
-                            <th>Representative</th>
-                            <th>Mobile</th>
-                            <th>Additional Mobile</th>
-                            <th>email</th>
-                            <th>Address</th>
-                            <th>Short Note</th>
+                            <th scope="col">Name</th>
+                            <th scope="col">Branch</th>
+                            <th scope="col">Chamber File Number</th>
+                            <th scope="col">Representative</th>
+                            <th scope="col">Mobile</th>
+                            <th scope="col">Additional Mobile</th>
+                            <th scope="col">email</th>
+                            <th scope="col">Address</th>
+                            <th scope="col">Short Note</th>
                         </tr>
                         </thead>
                         <tbody>
