--- a/templates/cases/courts.html
+++ b/templates/cases/courts.html
@@ -3,37 +3,57 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-  <h1>Courts</h1>
-  <form method="post">
-    {% csrf_token %}
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+            <h2 class="text-center">Courts</h2>
+            <form method="post">
+              {% csrf_token %}
+          
+            <div class="row">
+              <div class="col-md-6 offset-md-3">{{form.court|as_crispy_field}}</div>
+            </div>
+              
+             <div class="row">
+              <div class="col-md-2 offset-md-3"> 
+                <button type="submit" class="btn btn-primary">Create</button>
+              </div>
+             </div>
+            </form>
+          <br>
+          <br>
 
-    {{ form|crispy }}
-    
-    <button type="submit" class="btn btn-primary">Create</button>
-  </form>
-
-  <h1>Courts List</h1>
-  <div class="table-container">
-    <table>
-      <thead>
-        <tr>
-          <th>Court</th>
-          <th>Edit</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for singlecourt in courts %}
-          <tr>
-            <td>{{ singlecourt.court }}</td>
-            <td><a href="/courts/{{ singlecourt.id }}">Edit</a></td> <!-- Add an "Edit" button -->
-          </tr>
-        {% empty %}
-          <tr>
-            <td colspan="12">No cases found.</td>
-          </tr>
-        {% endfor %}
-      </tbody>
-    </table>
+          <div class="row">
+            <div class="col-md-6 offset-md-3">
+              <h2 class="text-center">Courts List</h2>
+              <div class="table-container">
+                <table class="table">
+                  <thead class="thead-dark">
+                    <tr>
+                      <th scope="col">Court</th>
+                      <th scope="col">Edit</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    {% for singlecourt in courts %}
+                      <tr>
+                        <td>{{ singlecourt.court }}</td>
+                        <td><a href="/courts/{{ singlecourt.id }}">Edit</a></td> <!-- Add an "Edit" button -->
+                      </tr>
+                    {% empty %}
+                      <tr>
+                        <td colspan="12">No cases found.</td>
+                      </tr>
+                    {% endfor %}
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+    </div>
   </div>
+</div>
+
+  
 
 {% endblock %}
