--- a/templates/cases/tomorrows_cases.html
+++ b/templates/cases/tomorrows_cases.html
@@ -2,26 +2,26 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h1>Tomorrow's Cases</h1>
-  <table>
-    <thead>
+  <h2 class="text-center">Tomorrow's Cases</h2>
+  <table class="table">
+    <thead class="thead-dark">
       <tr>
-        <th>Case Type</th>
-        <th>Court</th>
-        <th>Date</th>
-        <th>First Party</th>
-        <th>Appointed By</th>
-        <th>Law and Section</th>
-        <th>Case No</th>
-        <th>Police Station</th>
-        <th>Fixed For</th>
-        <th>Second Party</th>
-        <th>Mobile No.</th>
-        <th>Comments</th>
+         <th scope="col">Case Type</th>
+         <th scope="col">Court</th>
+         <th scope="col">Date</th>
+         <th scope="col">First Party</th>
+         <th scope="col">Appointed By</th>
+         <th scope="col">Law and Section</th>
+         <th scope="col">Case No</th>
+         <th scope="col">Police Station</th>
+         <th scope="col">Fixed For</th>
+         <th scope="col">Second Party</th>
+         <th scope="col">Mobile No.</th>
+         <th scope="col">Comments</th>
       </tr>
     </thead>
     <tbody>
-      {% for case in tomorrows_cases %}
+      {% for case in cases %}
         <tr>
           <td>{{ case.case_type }}</td>
           <td>{{ case.court }}</td>
