--- a/templates/dashboard/includes/sidebar.html
+++ b/templates/dashboard/includes/sidebar.html
@@ -19,12 +19,12 @@
               </nav>
           </div>
 
-          <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#accounts" aria-expanded="false" aria-controls="collapseLayouts">
+          <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#case" aria-expanded="false" aria-controls="collapseLayouts">
             <div class="sb-nav-link-icon"><i class="fa fa-university" aria-hidden="true"></i></div>
             Master Setup
             <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
           </a>
-        <div class="collapse" id="accounts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
+        <div class="collapse" id="case" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
             <nav class="sb-sidenav-menu-nested nav">
                 <a class="nav-link" href="{% url 'case-type' %}">Case Type</a>
                 <a class="nav-link" href="{% url 'courts' %}">Courts</a>
@@ -52,7 +52,7 @@
         </a>
         <div class="collapse" id="accounts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
             <nav class="sb-sidenav-menu-nested nav">
-                <a class="nav-link" href="{% url 'transaction' %}">Entry Transaction</a>
+                <a class="nav-link" href="{% url 'all_transactions' %}">Entry Transaction</a>
                 <a class="nav-link" href="{% url 'statements' %}">Statements</a>
                 <a class="nav-link" href="#">Due Bills</a>
                 <a class="nav-link" href="#">Bills and Invoices</a>
