--- a/templates/cases/all_client.html
+++ b/templates/cases/all_client.html
@@ -4,7 +4,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h3 class="text-center">Case List</h3>
+            <h3 class="text-center">Client List</h3>
             {% if clients %}
                 <table class="table">
                     <thead class="thead-dark">
