User reference added to Case model

--- a/templates/cases/all_client.html
+++ b/templates/cases/all_client.html
@@ -21,7 +21,7 @@
                         </tr>
                         </thead>
                         <tbody>
-                        {% for case in cases %}
+                        {% for client in clients %}
                             <tr>
                             <td>{{ client.name }}</td>
                             <td>{{ client.branch }}</td>
