Fixed dashboard data and table

--- a/templates/cases/add_client.html
+++ b/templates/cases/add_client.html
@@ -16,7 +16,7 @@
            </div>
            <div class="row">
             <div class="col-md-6">{{ form.chamber_file_number|as_crispy_field }}</div>
-            <div class="col-md-6">{{ form.Representativ|as_crispy_field }}</div>
+            <div class="col-md-6">{{ form.Representative|as_crispy_field }}</div>
            </div>
            <div class="row">
             <div class="col-md-6">{{ form.mobile|as_crispy_field }}</div>
