--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -4,17 +4,17 @@
 
 <main>
     <div class="container-fluid px-4">
-        <h1 class="mt-4">Dashboard</h1>
+        <h1 class="mt-4">Dashboard - ({{user.name}})</h1>
         <ol class="breadcrumb mb-4">
             <li class="breadcrumb-item active">Dashboard</li>
         </ol>
         
         <div class="row">
-            
-            <div class="col-xl-3 col-md-6">
-                <div class="card bg-primary text-white mb-4">
+
+            <div class="col-xl-4 col-md-4">
+                <div class="card bg-primary text-white mb-4" >
                     <div class="card-body">
-                        <h1 class="display-4">{{ all_cases }}</h1> <!-- Replace '123456789' with your desired large number -->
+                        <h1 class="display-4">{{ all_cases }}</h1> 
                         All Cases
                     </div>
                     <div class="card-footer d-flex align-items-center justify-content-between">
@@ -24,10 +24,10 @@
                 </div>
             </div>
 
-            <div class="col-xl-3 col-md-6">
+            <div class="col-xl-4 col-md-6">
                 <div class="card bg-primary text-white mb-4">
                     <div class="card-body">
-                        <h1 class="display-4">{{running_cases}}</h1> <!-- Replace '123456789' with your desired large number -->
+                        <h1 class="display-4">{{running_cases}}</h1> 
                         Running Cases
                     </div>
                     <div class="card-footer d-flex align-items-center justify-content-between">
@@ -37,10 +37,10 @@
                 </div>
             </div>
 
-            <div class="col-xl-3 col-md-6">
+            <div class="col-xl-4 col-md-6">
                 <div class="card bg-success text-white mb-4">
                     <div class="card-body">
-                        <h1 class="display-4">{{ todays_cases }}</h1> <!-- Replace '123456789' with your desired large number -->
+                        <h1 class="display-4">{{ todays_cases }}</h1> 
                         Todays Cases
                     </div>
                     <div class="card-footer d-flex align-items-center justify-content-between">
@@ -49,11 +49,13 @@
                     </div>
                 </div>
             </div>
+        </div>
 
-            <div class="col-xl-3 col-md-6">
+        <div class="row">
+            <div class="col-xl-4 col-md-6">
                 <div class="card bg-success text-white mb-4">
                     <div class="card-body">
-                        <h1 class="display-4">{{ tomorrows_cases }}</h1> <!-- Replace '123456789' with your desired large number -->
+                        <h1 class="display-4">{{ tomorrows_cases }}</h1> 
                         Tomorrows Cases
                     </div>
                     <div class="card-footer d-flex align-items-center justify-content-between">
@@ -63,10 +65,10 @@
                 </div>
             </div>
 
-            <div class="col-xl-3 col-md-6">
+            <div class="col-xl-4 col-md-6">
                 <div class="card bg-warning text-white mb-4">
                     <div class="card-body">
-                        <h1 class="display-4">{{ not_updated_cases }}</h1> <!-- Replace '123456789' with your desired large number -->
+                        <h1 class="display-4">{{ not_updated_cases }}</h1> 
                         Not updated Cases
                     </div>
                     <div class="card-footer d-flex align-items-center justify-content-between">
@@ -76,10 +78,10 @@
                 </div>
             </div>
 
-            <div class="col-xl-3 col-md-6">
+            <div class="col-xl-4 col-md-6">
                 <div class="card bg-danger text-white mb-4">
                     <div class="card-body">
-                        <h1 class="display-4">{{ abandoned_cases }}</h1> <!-- Replace '123456789' with your desired large number -->
+                        <h1 class="display-4">{{ abandoned_cases }}</h1> 
                         Abandoned Cases
                     </div>
                     <div class="card-footer d-flex align-items-center justify-content-between">
@@ -87,30 +89,8 @@
                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                     </div>
                 </div>
-            </div>
-            
+            </div> 
         </div>
-        <div class="row">
-            <div class="col-xl-6">
-                <div class="card mb-4">
-                    <div class="card-header">
-                        <i class="fas fa-chart-area me-1"></i>
-                        Area Chart Example
-                    </div>
-                    <div class="card-body"><canvas id="myAreaChart" width="100%" height="40"></canvas></div>
-                </div>
-            </div>
-            <div class="col-xl-6">
-                <div class="card mb-4">
-                    <div class="card-header">
-                        <i class="fas fa-chart-bar me-1"></i>
-                        Bar Chart Example
-                    </div>
-                    <div class="card-body"><canvas id="myBarChart" width="100%" height="40"></canvas></div>
-                </div>
-            </div>
-        </div>
-        
     </div>
 </main>
 
