--- a/templates/cases/decided_cases.html
+++ b/templates/cases/decided_cases.html
@@ -4,8 +4,8 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h3 class="text-center">Case List</h3>
-                {% if cases %}
+            <h3 class="text-center">Decided Case List</h3>
+                {% if decided_cases %}
                     <table class="table">
                         <thead class="thead-dark">
                             <tr>
@@ -24,7 +24,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            {% for case in cases %}
+                            {% for case in decided_cases %}
                             <tr>
                             <th scope="row">{{ case.case_type }}</th>
                             <td>{{ case.court }}</td>
@@ -50,44 +50,3 @@
   </div>
 {% endblock %}
 
-
-                        <thead class="thead-dark">
-                        <tr>
-                            <th scope="col">Case Type</th>
-                            <th scope="col">Court</th>
-                            <th scope="col">Date</th>
-                            <th scope="col">First Party</th>
-                            <th scope="col">Appointed By</th>
-                            <th scope="col">Law and Section</th>
-                            <th scope="col">Case No</th>
-                            <th scope="col">Police Station</th>
-                            <th scope="col">Fixed For</th>
-                            <th scope="col">Second Party</th>
-                            <th scope="col">Mobile No.</th>
-                            <th scope="col">Comments</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        {% for case in cases %}
-                            <tr>
-                            <th scope="row">{{ case.case_type }}</th>
-                            <td>{{ case.court }}</td>
-                            <td>{{ case.date }}</td>
-                            <td>{{ case.first_party }}</td>
-                            <td>{{ case.appointed_by }}</td>
-                            <td>{{ case.law_and_section }}</td>
-                            <td>{{ case.case_no }}</td>
-                            <td>{{ case.police_station }}</td>
-                            <td>{{ case.fixed_for }}</td>
-                            <td>{{ case.second_party }}</td>
-                            <td>{{ case.mobile_no }}</td>
-                            <td>{{ case.comments }}</td>
-                            </tr>
-                        {% empty %}
-                            <tr>
-                            <td colspan="12">No cases found.</td>
-                            </tr>
-                        {% endfor %}
-                        </tr>
-                    </tbody>
-                    </table>
