Profile page added

--- a/templates/cases/police_stations.html
+++ b/templates/cases/police_stations.html
@@ -9,7 +9,7 @@
   <div class="row">
     <div class="col-md-12">
 
-      <h2 class="text-center">Courts</h2>
+      <h2 class="text-center">Police Station</h2>
       <form method="post">
         {% csrf_token %}
     
@@ -29,7 +29,7 @@
     <br>
       <div class="row">
         <div class="col-md-6 offset-md-3">
-          <h2 class="text-center">Courts List</h2>
+          <h2 class="text-center">Police Station List</h2>
       <div class="table-container">
         <table class="table">
           <thead class="thead-dark">
