--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -9,6 +9,7 @@
         <meta name="author" content="" />
         <title>Dashboard - Diary</title>
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
         
     </head>
@@ -31,7 +32,7 @@
                 
                 {% endblock content %}
 
-                {% comment %} {% include 'dashboard/includes/table.html' %} {% endcomment %}
+                
                
 
                 {% include 'dashboard/includes/footer.html' %}
@@ -41,6 +42,8 @@
         <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
         <script src="{% static 'assets/demo/chart-area-demo.js'%}"></script>
         <script src="{% static 'assets/demo/chart-bar-demo.js' %}"></script>
         <script src="{% static 'js/scripts.js' %}"></script>
