--- a/templates/dashboard/includes/topnavbar.html
+++ b/templates/dashboard/includes/topnavbar.html
@@ -17,7 +17,7 @@
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="#">Settings</a></li>
               <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Profile</a></li>
+              <li><a class="dropdown-item" href="{% url 'profile_page' %}">Profile</a></li>
               <li><hr class="dropdown-divider" /></li>
               <li><a class="dropdown-item" href="{% url 'logout_user' %}">Logout</a></li>
           </ul>
