Responsive issues fixed

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,40 +3,24 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class="container login">
-    <div class="row">
-        <div class="col-md-12">
+
+    <div class="col-md-12">
             <h3 class="text-center">Login</h3>
+        </div>
+
 
             <form method="POST">
                 {% csrf_token %}
-    
-                <div class="row">
-                    <div class="col-md-4"></div>
-                    <div class="col-md-4">{{ login_form.email|as_crispy_field }}</div>
-                    <div class="col-md-4"></div>
-            
+                    <div class="col-md-6 offset-md-3 col-sm-12">{{ login_form.email|as_crispy_field }}</div>
+                    <div class="col-md-6 offset-md-3 col-sm-12">{{ login_form.password|as_crispy_field }}</div>
                     
-                </div>
-                <div class="row">
-                    <div class="col-md-4"></div>
-                    <div class="col-md-4">{{ login_form.password|as_crispy_field }}</div>
-                    <div class="col-md-4"></div>
-             
+                    <div class="col-md-2 offset-md-5 col-sm-12"> <button type="submit" class="btn btn-primary btn-block btn-lg">Login</button></div>
                     
-                </div>
-                <div class="row">
-                    <div class="col-md-5"></div>
-                    <div class="col-md-2"> <button type="submit" class="btn btn-primary btn-block btn-lg">Login</button></div>
-                    <div class="col-md-5"></div>
-                </div>
+                
                 {% for error in login_form.errors %}
                 <p style="color:red">{{error}}</p>
                 {% endfor %}
             </form>
-        </div>
-    </div>
-</div>
 
        
 
