--- a/templates/accounts/statements.html
+++ b/templates/accounts/statements.html
@@ -6,8 +6,8 @@
         <div class="col-md-12">
             <h3 class="text-center">Statements</h3>
             {% if statements %}
-                    <table>
-                        <thead>
+            <table class="table">
+                <thead class="thead-dark">
                         <tr>
                             <th>Date</th>
                             <th>Client Name</th>
