--- a/templates/dashboard/includes/sidebar.html
+++ b/templates/dashboard/includes/sidebar.html
@@ -54,7 +54,7 @@
             <nav class="sb-sidenav-menu-nested nav">
                 <a class="nav-link" href="{% url 'all_transactions' %}">Entry Transaction</a>
                 <a class="nav-link" href="{% url 'statements' %}">Statements</a>
-                <a class="nav-link" href="#">Due Bills</a>
+                <a class="nav-link" href="{% url 'due_bills' %}">Due Bills</a>
                 <a class="nav-link" href="#">Bills and Invoices</a>
                 <a class="nav-link" href="#">Quotations</a>
             </nav>
