--- a/diary/static/css/styles.css
+++ b/diary/static/css/styles.css
@@ -11235,3 +11235,9 @@ body {
 .statements{
   margin-top: 50px !important;
 }
+
+.profilephoto{
+  border-radius: 50%;
+  height: 300px;
+  width: 300px;
+}
