--- a/templates/dashboard/profile_update.html
+++ b/templates/dashboard/profile_update.html
@@ -3,31 +3,41 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
+<br>
+<br>
 
 <div class="container login">
     <div class="row">
-        <div class="col-md-6 offset-md-3">
+        <div class="col-md-10 offset-md-1">
             <h3 class="text-center">Profile Update</h3>
                 
-            <form method="POST">
+            <form method="POST"  enctype="multipart/form-data">
                 {% csrf_token %}
-                {% comment %} <div class="row">
-                    <div class="col-md-4">{{register_form.name|as_crispy_field}} </div>
-                    <div class="col-md-4">{{register_form.email|as_crispy_field}}</div>
-                    <div class="col-md-4">{{register_form.phone|as_crispy_field}}</div>
-                </div>
                 <div class="row">
-                    <div class="col-md-6">{{register_form.password1|as_crispy_field}}</div>
-                    <div class="col-md-6">{{register_form.password2|as_crispy_field}}</div>
-                </div>
-
-                <div class="row">
-                    <div class="col-md-4"></div>
-                    <div class="col-md-4"><button type="submit" class="btn btn-success btn-block btn-lg">Sign Up</button> </div>
+                    <div class="col-md-6">{{form.name|as_crispy_field}} </div>
+                    <div class="col-md-6">{{form.email|as_crispy_field}}</div>
                     
-                </div> {% endcomment %}
+                </div>
+                <div class="row">
+                    <div class="col-md-6">{{form.phone|as_crispy_field}}</div>
+                    <div class="col-md-6">{{form.designation|as_crispy_field}}</div>
+                    <div class="col-md-6">{{form.qualification|as_crispy_field}}</div>
+                    <div class="col-md-6">{{form.membership_number|as_crispy_field}}</div>
+                </div>
 
-                {{form|crispy}}
+                <div class="row">
+                    <div class="col-md-6">{{form.bar_assosciation|as_crispy_field}}</div>
+                    <div class="col-md-6">{{form.date_of_birth|as_crispy_field}}</div>
+                    
+                </div>
+
+                <div class="row">
+                    <div class="col-md-6">{{form.gender|as_crispy_field}}</div>
+                    <div class="col-md-6">{{form.chamber_address|as_crispy_field}}</div>
+                    <div class="col-md-6">{{form.photo|as_crispy_field}}</div>
+    
+                </div>
+                
                 <br>
                 <div class="row">
                     <div class="col-md-4"></div>
