--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -7,12 +7,20 @@
     <div class="col-md-12">
             <h3 class="text-center">Login</h3>
         </div>
-
+                {% if messages %}
+                {% for message in messages %} 
+                <div class="alert {{message.tags}} m-1" role="alert">
+                    {{message}}
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-label="Close">&times;</span>
+                </div>
+                {% endfor %} 
+            {% endif %}
 
             <form method="POST">
                 {% csrf_token %}
-                    <div class="col-md-6 offset-md-3 col-sm-12">{{ login_form.email|as_crispy_field }}</div>
-                    <div class="col-md-6 offset-md-3 col-sm-12">{{ login_form.password|as_crispy_field }}</div>
+                    <div class="col-md-6 offset-md-3 col-sm-12">{{ form.email|as_crispy_field }}</div>
+                    <div class="col-md-6 offset-md-3 col-sm-12">{{ form.password|as_crispy_field }}</div>
                     
                     <div class="col-md-2 offset-md-5 col-sm-12"> <button type="submit" class="btn btn-primary btn-block btn-lg">Login</button></div>
                     
@@ -22,6 +30,5 @@
                 {% endfor %}
             </form>
 
-       
 
 {% endblock content %}
