Updated Tables & added bills

--- a/templates/cases/all_cases.html
+++ b/templates/cases/all_cases.html
@@ -4,7 +4,7 @@
 <br>
 
 {% if cases %}
-<div class="card mb-4">
+<div class="card mb-4 ml-4 mr-4">
     <div class="card-header">
         <i class="fas fa-table me-1"></i>
         Cases List
