--- a/templates/cases/all_client.html
+++ b/templates/cases/all_client.html
@@ -2,10 +2,8 @@
 
 {% block content %}
 <br>
-<div class="container">
-  <div class="row">
-    <div class="col-md-10 offset-md-1">
-      <div class="card mb-4">
+
+      <div class="card mb-4 ml-4 mr-4">
         <div class="card-header">
             <i class="fas fa-table me-1"></i>
             All Clients
@@ -60,11 +58,6 @@
       </div>
       {% endif %}
       
-         
-    </div>
-  </div>
-</div>
-
 
 {% endblock %}
 
