--- a/templates/dashboard/includes/sidebar.html
+++ b/templates/dashboard/includes/sidebar.html
@@ -55,8 +55,8 @@
                 <a class="nav-link" href="{% url 'all_transactions' %}">Entry Transaction</a>
                 <a class="nav-link" href="{% url 'statements' %}">Statements</a>
                 <a class="nav-link" href="{% url 'due_bills' %}">Due Bills</a>
-                <a class="nav-link" href="#">Bills and Invoices</a>
-                <a class="nav-link" href="#">Quotations</a>
+                <a class="nav-link" href="{% url 'bill_invoices' %}">Bills and Invoices</a>
+                <a class="nav-link" href="{% url 'quotations' %}">Quotations</a>
             </nav>
         </div>
         
