PDF added in Quotation

--- a/diary/static/css/styles.css
+++ b/diary/static/css/styles.css
@@ -11241,3 +11241,12 @@ body {
   height: 300px;
   width: 300px;
 }
+
+.header{
+  max-height: 100px;
+  background-color: #17a2b8!important;
+  color:#fff !important;
+}
+.header a{
+  color:#fff !important;
+}
